--- a/css/screens/friends.css
+++ b/css/screens/friends.css
@@ -4,7 +4,8 @@
     display: block;
     background-color: #fafafa;
     padding: 15px 0px;
-    font-size: 16px;
+    font-size: 18px;
+    margin-bottom: 10px;
 }
 
 #friends-display-link i {
