--- a/css/components/user-component.css
+++ b/css/components/user-component.css
@@ -1,3 +1,8 @@
+
+.user-component {
+    justify-content: space-between;
+}
+
 .user-component,
 .user-component__column:first-child {
     display: flex;
@@ -24,4 +29,20 @@
 .user-component__avatar--xl{
     width: 80px;
     height: 80px;
+}
+
+
+.user-component__avatar--sm {
+    width: 60px;
+    height: 60px;
+    border-radius: 25px;
+}
+.user-component__title--not-bold {
+    font-weight: 400;
+}
+
+.friends-screen__channel{
+    margin-top: 25px;
+    border-top: 1px solid rgba(0, 0, 0, 0.2);
+
 }
