--- a/css/components/screen-header.css
+++ b/css/components/screen-header.css
@@ -1,16 +1,30 @@
 .screen-header {
     display: flex;
     justify-content: space-between;
-    padding: 40px 20px 20px;
     align-items: center;
     padding: var(--horizontal-space);
-}
-
-.screen-header__title {
+    margin-bottom: 15px;
+  }
+  
+  .screen-header__title {
     font-size: 32px;
     font-weight: 600;
-}
-
-.screen-header__icons span {
+  }
+  
+  .screen-header__icons span {
     margin-left: 25px;
-}
+    position: relative;
+  }
+  
+  @keyframes rotateCog {
+    from {
+      transform: none;
+    }
+    to {
+      transform: rotateZ(360deg);
+    }
+  }
+  
+  .screen-header__icons .fa-cog:hover {
+    animation: rotateCog 1s linear infinite;
+  }
