--- a/css/components/alt-screen-header.css
+++ b/css/components/alt-screen-header.css
@@ -4,6 +4,9 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    position:fixed;
+    width:100%;
+    box-sizing:border-box;
   }
   .alt-header__column {
     width: 33%;
@@ -28,6 +31,10 @@
     justify-content: flex-end;
   }
   
+  .alt-header__column span:last-child {
+    margin-left: 20px;
+  }
+
   .alt-header__column span:last-child {
     margin-left: 20px;
   }
