--- a/css/screens/find.css
+++ b/css/screens/find.css
@@ -1,22 +1,4 @@
-.find-icons {
-display: flex;
-justify-content: space-between;
 
-}
-
-.find-icons__icon {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.find-icons__icon i {
-    font-size: 35px;
-}
-
-.find-icons__icon span {
-    margin-top: 18px;
-}
 .recommended-friends {
     margin: 25px 0px;
     padding: 25px 0px;
@@ -54,6 +36,8 @@ justify-content: space-between;
 
     .open-post {
         display: flex;
+        justify-content: space-between;
+        align-items: center;
     }
     
 
@@ -93,3 +77,57 @@ justify-content: space-between;
     .open-post__member-status {
         color: #ffb0e0;
     }
+
+    .open-post__photo {
+        position: relative;
+    }
+
+
+
+    .open-post__photo img {
+        width: 120px; 
+        height: 120px;
+        border-radius: 10px;
+ 
+    }
+
+
+    .open-post__heart-count {
+        background-color: rgba(0, 0, 0, 0.5);
+        color: white;
+        padding: 5px;
+        border-radius: 20px;
+        display: flex;
+        align-items: center;
+        position: absolute;
+    }
+    .open-post__heart-count span {
+        margin-left: 3px;
+        bottom: 10px;
+        right: 10px;
+        font-size: 12px;
+}
+
+.open-post__heart-count span {
+    margin-left: 3px;
+}
+
+@keyframes heartBeat {
+ 0%{
+    color: white;
+    transform: none;
+ }
+ 50%{
+    color: tomato;
+    transform: scale(1.5);
+ }
+ 100%{
+    color: white;
+    transform: none;
+}
+}
+
+.open-post__heart-count:hover i {
+    will-change: transform;
+    animation: heartBeat 1s linear infinite;
+}
